<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    tools:ignore="ExtraText">
    /*
    меню:
    - (Иконка Person) Обо мне
    - (Иконка School) Образование
    - (Иконка Work) Работа
    - (Иконка Computer) Мои планы
    - (Иконка Contact) Контакты
    */
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_me"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_about_me" />
        <item
            android:id="@+id/my_education"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_my_education" />
        <item
            android:id="@+id/my_work"
            android:icon="@drawable/ic_baseline_work_24"
            android:title="@string/menu_my_work" />
        <item
            android:id="@+id/my_plans"
            android:icon="@drawable/ic_baseline_computer_24"
            android:title="@string/menu_my_plans" />
        <item
            android:id="@+id/my_contacts"
            android:icon="@drawable/ic_baseline_contact_mail_24"
            android:title="@string/menu_my_contacts" />

    </group>
</menu>